# anydm

./: .gitignore  README.md  bunfig.toml  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/download/: docker-compose.yml  dockerfile  makefile  pyproject.toml  ruff.toml
apps/download/src/: main.py
apps/download/src/client/: dlp.py
apps/download/src/core/: base.py  common.py  constant.py  constants.py  error.py  type.py
apps/download/src/data/migration/model/: 1_20251112134116_platform.py  2_20251112175825_file.py  3_20251112175903_media.py  4_20251112210952_task.py
apps/download/src/data/model/: __init__.py  file.py  media.py  platform.py  task.py
apps/download/src/data/repo/interface/: task.py
apps/download/src/data/repo/task/: __init__.py  crud.py
apps/download/src/data/schema/task/: __init__.py  crud.py
apps/download/src/db/: __init__.py
apps/download/src/db/migration/model/: 0_20251110183313_init.py  2_20251112135018_file.py
apps/download/src/db/model/: __init__.py  file.py  media.py  platform.py
apps/download/src/route/download/: __init__.py  download.py
apps/download/src/route/health/: health.py
apps/download/src/service/: __init__.py  download.py  health.py
apps/download/src/services/: __init__.py  health.py
apps/service/: package.json  prettier.config.ts
apps/ui/: index.html  package.json  prettier.config.ts  server.ts  tsconfig.json  vite.config.ts
apps/web/: package.json  prettier.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: download.md  plan.md
(+35 files in other folders)
