[project]
name = "download"
version = "0.0.1"
description = "Download Service"
authors = [
    { name = "Roman", email = "iamromandev@gmail.com" },
]
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "loguru==0.7.3",
    "toml==0.10.2",
    "fastapi[all]==0.121.1",
    "tortoise-orm[accel,aiomysql]==0.25.1",
    "aerich[mysql,toml]==0.9.2",
    "redis==7.0.1",
    "aiohttp==3.13.2",
    "yt-dlp>=2025.10.22",
]

[dependency-groups]
dev = [
    "pre-commit==4.4.0",
    "ruff==0.14.4",
    "mypy==1.18.2",
    "ty==0.0.1a25",
]

[tool.uv]
package = false

[tool.aerich]
tortoise_orm = "src.db.DB_CONFIG"
location = "./src/db/migration"
src_folder = "./."
